# promptyped

./: README.md  config_app_example_big_task.json  config_app_example_chat.json  config_model_example.json  promtyped.cabal  sample_config.json
app/: AppConfig.hs  BinanceApiDataRecorder.hs  Core.hs  FileSystem.hs  GoLang.hs  Http11Server.hs  Http20Server.hs  Logging.hs  Main.hs  OpenRouterClient.hs  PromptCommon.hs  ShapeChecker.hs  TaskFromConfig.hs  Tools.hs
src/: BuildSystem.hs  CPlusPlus.hs  Core.hs  Engine.hs  FileSystem.hs  GoLang.hs  Haskell.hs  Logging.hs  Memoise.hs  OpenRouterClient.hs  PromptCommon.hs  PromptTexts.hs  Python.hs  Rust.hs  TerminalInput.hs  Tools.hs  Typst.hs
test/: FileSystemSpec.hs  MemoiseSpec.hs  ToolsSpec.hs  TypstSpec.hs
