cabal-version:   3.4
name:            promtyped
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Core
        FileSystem
        Memoise
        PromptCommon
        PromptTexts
        Engine
        Tools
        CPlusPlus
        GoLang
        Logging
        BuildSystem
        OpenRouterClient
        ShapeChecker

    hs-source-dirs:     src
    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
    ghc-options:        -Wall
    build-depends:
        base >=4.20,
        aeson,
        async,
        containers,
        data-default-class,
        directory,
        extra,
        filepath,
        groups,
        hslogger,
        http-client,
        http-client-tls,
        http-types,
        mtl,
        network, 
        process,
        raw-strings-qq,
        relude ^>=1.2.0,
        regex-pcre,
        servant,
        servant-client,
        servant-client-core,
        text,
        time,
        transformers,
        vector

executable promtyped
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
    other-modules:
       AppConfig 
       BinanceApiDataRecorder
    ghc-options:        -Wall
    build-depends:
        promtyped,
        HUnit,
        QuickCheck,
        aeson,
        aeson-schemas,
        async,
        base >=4.20,
        containers,
        directory,
        extra,
        filepath,
        groups,
        hslogger,
        hspec,
        hspec-core,
        mtl,
        network,
        process,
        relude ^>=1.2.0,
        scientific,
        temporary,
        text,
        time,
        transformers,
        vector

test-suite promtyped-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:
        MemoiseSpec
        FileSystemSpec
        ToolsSpec

    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        promtyped,
        HUnit,
        QuickCheck,
        base >=4.20,
        containers,
        directory,
        extra,
        filepath,
        groups,
        hslogger,
        hspec,
        hspec-core,
        mtl,
        network,
        process,
        relude ^>=1.2.0,
        temporary,
        text,
        time,
        transformers,
        vector
