cabal-version:   3.4
name:            promtyped
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        BuildSystem
        Core
        FileSystem
        Memoise
        PromptCommon
        PromptTexts
        Engine
        Tools
        CPlusPlus
        GoLang
        Logging
        OpenRouterClient
        ShapeChecker

    hs-source-dirs:     src
    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
    ghc-options:        -Wall
    build-depends:
        aeson,
        async,
        base >=4.20,
        containers,
        data-default-class,
        directory,
        exceptions,
        extra,
        filepath,
        groups,
        hslogger,
        http-client,
        http-client-tls,
        http-types,
        monad-loops,
        mtl,
        network,
        process,
        raw-strings-qq,
        regex-pcre,
        relude ^>=1.2.0,
        servant,
        servant-client,
        servant-client-core,
        text,
        time,
        transformers,
        vector

executable promtyped
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        AppConfig
        BinanceApiDataRecorder
        Http11Server

    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
    ghc-options:        -Wall
    build-depends:
        HUnit,
        QuickCheck,
        aeson,
        aeson-schemas,
        async,
        base >=4.20,
        containers,
        directory,
        exceptions,
        extra,
        filepath,
        groups,
        hslogger,
        hspec,
        hspec-core,
        mtl,
        monad-loops,
        network,
        process,
        promtyped,
        raw-strings-qq,
        relude ^>=1.2.0,
        scientific,
        temporary,
        text,
        time,
        transformers,
        vector

test-suite promtyped-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:
        MemoiseSpec
        FileSystemSpec
        ToolsSpec

    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        HUnit,
        QuickCheck,
        base >=4.20,
        containers,
        directory,
        exceptions,
        extra,
        filepath,
        groups,
        hslogger,
        hspec,
        hspec-core,
        mtl,
        monad-loops,
        network,
        process,
        promtyped,
        relude ^>=1.2.0,
        temporary,
        text,
        time,
        transformers,
        vector
